k8s/base/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-rpc
  namespace: bobo-forum
  labels:
    app: auth-service
spec:
  type: ClusterIP
  selector:
    app: auth-service
  ports:
    - name: rpc
      port: 8001
      targetPort: 8001
      protocol: TCP
