k8s/base/interaction-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: interaction-rpc
  namespace: bobo-forum
  labels:
    app: interaction-service
spec:
  type: ClusterIP
  selector:
    app: interaction-service
  ports:
    - name: rpc
      port: 8004
      targetPort: 8004
      protocol: TCP
