k8s/base/post-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: post-rpc
  namespace: bobo-forum
  labels:
    app: post-service
spec:
  type: ClusterIP
  selector:
    app: post-service
  ports:
    - name: rpc
      port: 8002
      targetPort: 8002
      protocol: TCP
