k8s/base/search-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: search-rpc
  namespace: bobo-forum
  labels:
    app: search-service
spec:
  type: ClusterIP
  selector:
    app: search-service
  ports:
    - name: rpc
      port: 8003
      targetPort: 8003
      protocol: TCP
